spl/tests/compile_fail/dup_close_unsound.stderr
error: `dup` with `mut` cannot have behavior groups — mutation on aliased accounts is unsound
  --> tests/compile_fail/dup_close_unsound.rs:14:5
   |
14 | /     /// CHECK: testing dup + close
15 | |     #[account(mut, dup, token_close(dest = payer, authority = payer, token_program = token_program))]
16 | |     pub vault: Account<Token>,
   | |_____________________________^

warning: unused import: `accounts::token_close`
 --> tests/compile_fail/dup_close_unsound.rs:3:18
  |
3 | use quasar_spl::{accounts::token_close, *};
  |                  ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
